distributed register event - query servo controllers